backend/user-service/logs/restart.log

> @trademe/user-service@1.0.0 dev
> nodemon --exec ts-node -r tsconfig-paths/register src/app.ts

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node -r tsconfig-paths/register src/app.ts`[39m
/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/controllers/auth.ts(659,29): error TS2304: Cannot find name 'generateJWT'.
src/controllers/auth.ts(685,16): error TS18046: 'result' is of type 'unknown'.
src/controllers/auth.ts(686,21): error TS18046: 'result' is of type 'unknown'.
src/controllers/auth.ts(686,51): error TS18046: 'result' is of type 'unknown'.

    at createTSError (/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1613:10)
    at Object.require.extensions.<computed> [as .ts] (/root/trademe/backend/user-service/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1275:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1096:12)
    at Module.require (node:internal/modules/cjs/loader:1298:19) {
  diagnosticCodes: [ 2304, 18046, 18046, 18046 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node -r tsconfig-paths/register src/app.ts`[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node -r tsconfig-paths/register src/app.ts`[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node -r tsconfig-paths/register src/app.ts`[39m
